# this package config --------------------------------------------------------------------------------------------------
[package]
name                    = "telepathygrams"
description             = "Compile n-gram indices to query files within a directory."
version                 = "0.0.0"
edition.workspace       = true
license.workspace       = true
repository.workspace    = true
authors.workspace       = true

[[bin]]
name                    = "tg"
path                    = "src/main.rs"
doc                     = false

[dependencies]
ngram-index.workspace   = true

# regex-syntax.workspace  = true

[lints]
workspace               = true

# workspace config --------------------------------------------------------------------------------------------------
[workspace]
members                 = [
  "./",
  "ngram-index/",
]
default-members         = [
  "./",
  "ngram-index/",
]
resolver                = "2"

[profile]
dev                     = { opt-level = 0, debug = true }
release                 = { opt-level = 3, debug = true }

[workspace.dependencies]
ngram-index             = { path = "ngram-index/" }

regex-syntax            = "0.8.4"

[workspace.package]
edition                 = "2021"
license                 = "AGPL-3.0-or-later"
repository              = "https://github.com/cosmicexplorer/telepathygrams"
authors                 = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]

[workspace.lints.clippy]
len_without_is_empty    = "allow"
redundant_field_names   = "allow"
too_many_arguments      = "allow"
single_component_path_imports = "allow"
module_inception        = "allow"
match_ref_pats          = "allow"
expl_impl_clone_on_copy = "deny"
if_not_else             = "deny"
needless_continue       = "deny"
separated_literal_suffix = "deny"
unseparated_literal_suffix = "allow"
used_underscore_binding = "deny"
collapsible_else_if     = "allow"
result_large_err        = "allow"
missing_transmute_annotations = "allow"
