[package]
name                    = "ngram-index"
description             = "Compile n-gram indices."
version                 = "0.0.0"
edition.workspace       = true
license.workspace       = true
repository.workspace    = true
authors.workspace       = true

[dependencies]

[lints]
workspace               = true
