[package]
name                    = "ngram-query"
description             = "Query n-gram indices to seed a regex search."
version                 = "0.0.0"
edition.workspace       = true
license.workspace       = true
repository.workspace    = true
authors.workspace       = true

[dependencies]
displaydoc.workspace    = true
regex-syntax.workspace  = true
thiserror.workspace     = true

[lints]
workspace               = true
