[package]
name                    = "ngram-watcher"
description             = "Persistent process to watch a directory and recompute n-grams."
version                 = "0.0.0"
edition.workspace       = true
license.workspace       = true
repository.workspace    = true
authors.workspace       = true

[[bin]]
name                    = "ngram-watcher"
path                    = "src/main.rs"
doc                     = false

[dependencies]

[lints]
workspace               = true
